Tweaking responsive template

--- a/template.html
+++ b/template.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <title>Tensō Browsable API</title>
+  <meta name="viewport" content="width=device-width" />
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <style>
     /*! normalize.css v3.0.2 | MIT License | git.io/normalize */
@@ -433,6 +434,10 @@
     }
 
     /** Custom styles */
+    body {
+      font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    }
+
     a {
       color: #1badd1;
     }
