Adding `renderers` to the browsable API javascript [WIP]

--- a/template.html
+++ b/template.html
@@ -230,6 +230,7 @@
         var array = util.array;
         var render = util.render;
         var code = $( "code" )[ 0 ];
+        var formats = {{formats}};
 
         render( function () {
             var html = code.innerHTML,
