--- a/template.html
+++ b/template.html
@@ -238,29 +238,45 @@
 </script>
 <script type="application/javascript">
     ( function ( keigai ) {
-        var util = keigai.util;
-        var $ = util.$;
-        var array = util.array;
-        var render = util.render;
-        var code = $( "code" )[ 0 ];
-        var formats = $( "#formats" )[0];
-        var observable = util.observer();
+        var util = keigai.util,
+            $ = util.$,
+            array = util.array,
+            element = util.element,
+            code = $( "code" )[ 0],
+            formats = $( "select" )[0],
+            observable = util.observer();
 
-        observable.hook( formats, "select" );
-        observable.on( "select", function ( e ) {
-            debugger;
+        observable.hook( formats, "change" );
+        observable.on( "change", function () {
+            var value = element.val( formats),
+                parsed = keigai.util.parse();
+
+            // This shouldn't happen, but lets assume it does...
+            if ( value === "html" ) {
+                return;
+            }
+
+            if ( value && value !== parsed.query.format ) {
+                if ( parsed.query.format ) {
+                    location.href = parsed.href.replace( /format=(\w*)/, "format=" + value );
+                } else if ( !location.search ) {
+                    location.search = "?format=" + value;
+                } else {
+                    location.search += "&format=" + value;
+                }
+            }
         } );
 
-        render( function () {
+        util.render( function () {
             var html = code.innerHTML,
-                    matches, replaces;
+                matches, replaces;
 
             matches = array.unique( html.match( /([^\s*]+)/g )
                     .filter( function ( i ){
                         return !/(\{|\[|\]|\})/.test( i );
                     } ) );
 
-            replaces = matches.map( function ( i, idx ){
+            replaces = matches.map( function ( i ){
                 if ( i.indexOf( '"' ) > -1 ) {
                     return i.replace( /(\".*\")/, "<span class='item'>$1</span>" );
                 } else {
