Fixing H2 line height, adding tests for renderers

--- a/template.html
+++ b/template.html
@@ -72,6 +72,7 @@
 
 		h2 {
 			font-size: 1.8em;
+			line-height: 1.2em;
 		}
 
 		form,
@@ -99,8 +100,8 @@
 
 		pre,
 		code {
-			padding: 0px;
-			margin: 0px;
+			padding: 0;
+			margin: 0;
 		}
 
 		footer {
@@ -177,7 +178,7 @@
 			}
 
 			table {
-				margin: 0px !important;
+				margin: 0 !important;
 			}
 
 			header,
