--- a/template.html
+++ b/template.html
@@ -53,77 +53,129 @@
 			border-spacing: 0;
 		}
 
+		/** Humane.js style */
 		html,
 		body {
 			min-height: 100%;
 		}
 		.humane,
-		.humane-original {
+		.humane-jackedup {
 			position: fixed;
-			-moz-transition: all 0.2s ease-out;
-			-webkit-transition: all 0.2s ease-out;
-			-ms-transition: all 0.2s ease-out;
-			-o-transition: all 0.2s ease-out;
-			transition: all 0.2s ease-out;
+			-moz-transition: all 0.6s ease-in-out;
+			-webkit-transition: all 0.6s ease-in-out;
+			-ms-transition: all 0.6s ease-in-out;
+			-o-transition: all 0.6s ease-in-out;
+			transition: all 0.6s ease-in-out;
 			z-index: 100000;
 			filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
 		}
 		.humane,
-		.humane-original {
-			font-family: Ubuntu, Verdana, sans-serif;
-			line-height: 40px;
-			font-size: 25px;
-			top: 25%;
-			left: 25%;
+		.humane-jackedup {
+			font-family: Helvetica Neue, Helvetica, san-serif;
+			font-size: 18px;
+			letter-spacing: -1px;
+			top: 20px;
+			left: 30%;
 			opacity: 0;
-			width: 50%;
-			min-height: 40px;
+			width: 40%;
+			color: #333;
 			padding: 10px;
 			text-align: center;
-			background-color: #000;
-			color: #fff;
-			-webkit-border-radius: 15px;
-			border-radius: 15px;
+			background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAACWCAYAAAAfduJyAAAABmJLR0QA/wD/AP+gvaeTAAAAIklEQVQokWNgYGCQZGJgYGDARTDSQnboGDqsnDt0DKWNLAAkiQFdC+vZNQAAAABJRU5ErkJggg==');
+			background: -webkit-gradient(linear, left top, left bottom, color-stop(0, rgba(0,0,0,0.1)), color-stop(1, rgba(0,0,0,0.2))) no-repeat;
+			background: -moz-linear-gradient(top, rgba(0,0,0,0.1) 0%, rgba(0,0,0,0.2) 100%) no-repeat;
+			background: -webkit-linear-gradient(top, rgba(0,0,0,0.1) 0%, rgba(0,0,0,0.2) 100%) no-repeat;
+			background: -ms-linear-gradient(top, rgba(0,0,0,0.1) 0%, rgba(0,0,0,0.2) 100%) no-repeat;
+			background: -o-linear-gradient(top, rgba(0,0,0,0.1) 0%, rgba(0,0,0,0.2) 100%) no-repeat;
+			background: linear-gradient(top, rgba(0,0,0,0.1) 0%, rgba(0,0,0,0.2) 100%) no-repeat;
+			background-color: #fff;
+			-webkit-border-radius: 3px;
+			border-radius: 3px;
+			text-shadow: 0 1px 1px rgba(255,255,255,0.8);
+			-webkit-box-shadow: 0 1px 2px rgba(0,0,0,0.5);
+			box-shadow: 0 1px 2px rgba(0,0,0,0.5);
+			-moz-transform: translateY(-100px);
+			-webkit-transform: translateY(-100px);
+			-ms-transform: translateY(-100px);
+			-o-transform: translateY(-100px);
+			transform: translateY(-100px);
 		}
 		.humane p,
-		.humane-original p,
+		.humane-jackedup p,
 		.humane ul,
-		.humane-original ul {
+		.humane-jackedup ul {
 			margin: 0;
 			padding: 0;
 		}
 		.humane ul,
-		.humane-original ul {
+		.humane-jackedup ul {
 			list-style: none;
 		}
-		.humane.humane-original-info,
-		.humane-original.humane-original-info {
-			background-color: #030;
+		.humane.humane-jackedup-info,
+		.humane-jackedup.humane-jackedup-info {
+			background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAADICAYAAAAp8ov1AAAABmJLR0QA/wD/AP+gvaeTAAAAR0lEQVQokWNISfn/n4mBgeE/EwMDAwMqQYQYmdoGlxgjI4rY//+Dx2nUFRsQZ2ALTrQQp8QL1DWeqASC014y7aCx8QwMDAwA1aZBIulmpvwAAAAASUVORK5CYII=');
+			background: -webkit-gradient(linear, left top, left bottom, color-stop(0, rgba(0,0,0,0.7)), color-stop(1, rgba(0,0,0,0.85))) no-repeat;
+			background: -moz-linear-gradient(top, rgba(0,0,0,0.7) 0%, rgba(0,0,0,0.85) 100%) no-repeat;
+			background: -webkit-linear-gradient(top, rgba(0,0,0,0.7) 0%, rgba(0,0,0,0.85) 100%) no-repeat;
+			background: -ms-linear-gradient(top, rgba(0,0,0,0.7) 0%, rgba(0,0,0,0.85) 100%) no-repeat;
+			background: -o-linear-gradient(top, rgba(0,0,0,0.7) 0%, rgba(0,0,0,0.85) 100%) no-repeat;
+			background: linear-gradient(top, rgba(0,0,0,0.7) 0%, rgba(0,0,0,0.85) 100%) no-repeat;
+			background-color: #fff;
+			color: #fff;
+			text-shadow: 0 -1px 1px rgba(0,0,0,0.35);
 		}
-		.humane.humane-original-success,
-		.humane-original.humane-original-success {
-			background-color: #030;
+		.humane.humane-jackedup-success,
+		.humane-jackedup.humane-jackedup-success {
+			background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAADICAYAAAAp8ov1AAAABmJLR0QA/wD/AP+gvaeTAAAASElEQVQokc2SMQ4AIAgDD9/K/79QVzWaENTownAJbWnA5SqACkA/Aiy59hczrGVC30Q7y57EmNU5NL5zwln50IMsfZMel+UBKtFBQSLWM9wLAAAAAElFTkSuQmCC');
+			background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #62c462), color-stop(1, #57a957)) no-repeat;
+			background: -moz-linear-gradient(top, #62c462 0%, #57a957 100%) no-repeat;
+			background: -webkit-linear-gradient(top, #62c462 0%, #57a957 100%) no-repeat;
+			background: -ms-linear-gradient(top, #62c462 0%, #57a957 100%) no-repeat;
+			background: -o-linear-gradient(top, #62c462 0%, #57a957 100%) no-repeat;
+			background: linear-gradient(top, #62c462 0%, #57a957 100%) no-repeat;
+			background-color: #64ff64;
+			color: #fff;
+			text-shadow: 0 -1px 1px rgba(0,0,0,0.35);
 		}
-		.humane.humane-original-error,
-		.humane-original.humane-original-error {
-			background-color: #300;
+		.humane.humane-jackedup-error,
+		.humane-jackedup.humane-jackedup-error {
+			background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAADICAIAAACmkByiAAAABmJLR0QA/wD/AP+gvaeTAAAAf0lEQVQokY2TOQ7AIAwER/5mivy/yRc2RQDhA0jhghFYO5bhuS+TZMAoIUMEhhH4loGhfu71cenM3DutWMsaeGKjv3zO5N17KLPJ0+fQD8cpv5uVLPo4vnX0PpXj0nuaaeVzdmw+yXG1O96n2p3kozB757Ni1Z5UPsU9SP8AeAG1kHXE+7RlPAAAAABJRU5ErkJggg==');
+			background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #ee5f5b), color-stop(1, #c43c35)) no-repeat;
+			background: -moz-linear-gradient(top, #ee5f5b 0%, #c43c35 100%) no-repeat;
+			background: -webkit-linear-gradient(top, #ee5f5b 0%, #c43c35 100%) no-repeat;
+			background: -ms-linear-gradient(top, #ee5f5b 0%, #c43c35 100%) no-repeat;
+			background: -o-linear-gradient(top, #ee5f5b 0%, #c43c35 100%) no-repeat;
+			background: linear-gradient(top, #ee5f5b 0%, #c43c35 100%) no-repeat;
+			background-color: #ee5f5b;
+			color: #fff;
+			text-shadow: 0 -1px 1px rgba(0,0,0,0.35);
 		}
-		.humane.humane-animate,
-		.humane-original.humane-original-animate {
-			opacity: 0.8;
+		.humane-animate,
+		.humane-jackedup.humane-jackedup-animate {
+			opacity: 1;
+			-moz-transform: translateY(0);
+			-webkit-transform: translateY(0);
+			-ms-transform: translateY(0);
+			-o-transform: translateY(0);
+			transform: translateY(0);
 		}
-		.humane.humane-animate:hover,
-		.humane-original.humane-original-animate:hover {
-			opacity: 0.6;
+		.humane-animate:hover,
+		.humane-jackedup.humane-jackedup-animate:hover {
+			opacity: 0.7;
 		}
-		.humane.humane-js-animate,
-		.humane-original.humane-original-js-animate {
-			opacity: 0.8;
+		.humane-js-animate,
+		.humane-jackedup.humane-jackedup-js-animate {
+			opacity: 1;
+			-moz-transform: translateY(0);
+			-webkit-transform: translateY(0);
+			-ms-transform: translateY(0);
+			-o-transform: translateY(0);
+			transform: translateY(0);
 		}
-		.humane.humane-js-animate:hover,
-		.humane-original.humane-original-js-animate:hover {
-			opacity: 0.6;
-			filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=60);
+		.humane-js-animate:hover,
+		.humane-jackedup.humane-jackedup-js-animate:hover {
+			opacity: 0.7;
+			filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=70);
 		}
 
 		/** Custom styles */
@@ -214,7 +266,7 @@
 		textarea {
 			width: 90%;
 			display: inline-block;
-			height: 400px;
+			height: 300px;
 		}
 
 		.code {
@@ -280,6 +332,18 @@
 		#methods,
 		#body {
 			margin-bottom: 25px;
+		}
+
+		#result {
+			margin-top: 25px;
+		}
+
+		#result h3 {
+			width: 100%;
+			border-bottom: 1px solid #ccc;
+			padding-bottom: 10px;
+			margin-bottom: 10px;
+			font-weight: bold;
 		}
 
 		@media (max-width: 899px) {
@@ -364,6 +428,12 @@
 							<textarea placeholder="JSON is required"></textarea>
 						</fieldset>
 						<button type="submit">Submit</button> <button type="reset">Reset</button>
+						<div id="result" class="hidden">
+							<h3>Result</h3>
+							<div class="code">
+								<pre><code></code></pre>
+							</div>
+						</div>
 					</form>
 				</div>
 			</div>
@@ -403,16 +473,62 @@
 			element = util.element,
 			render = util.render,
 			request = util.request,
+			string = util.string,
 			code = $( "code" )[ 0 ],
 			formats = $( "select" )[ 0 ],
 			observable = util.observer(),
 			parsed = keigai.util.parse(),
 			csrf = "{{csrf}}",
-			html = code.innerHTML,
-			matches, nav, replaces;
+			nav;
+
+		// Stage 1 of prettifying a <code>
+		function prepare ( html ) {
+			var matches, replaces;
+
+			// Preparing to change <pre> into Elements
+			matches = array.unique( html.match( /([^\s*]+)/g )
+					.filter( function ( i ){
+						return !/(\{|\[|\]|\})/.test( i );
+					} ) );
+
+			replaces = matches.map( function ( i ){
+				if ( i.indexOf( '"' ) > -1 ) {
+					return i.replace( /(\".*\")/, "<span class='item'>$1</span>" );
+				} else {
+					return i;
+				}
+			} );
+
+			array.iterate( matches, function ( i, idx ) {
+				html = html.replace( new RegExp( i, "g" ), replaces[ idx ] )
+			} );
+
+			return html;
+		}
+
+		// Prettifies a <code>
+		function prettify ( arg ) {
+			// Changing <pre> into selectable Elements
+			arg.parentNode.parentNode.innerHTML = prepare( arg.innerHTML )
+					.replace( /\n/g, "<br>\n" )
+					.replace(/(\s{2,2})/g, "<span class='spaces'></span>" );
+
+			// Changing URIs into anchors
+			array.iterate( $( '.item' ), function ( i ) {
+				var html = i.innerHTML,
+						val = html.replace( /(^\"|\"$)/g, "" );
+
+				if ( val.indexOf( "://" ) > -1 ) {
+					html = html.replace( val, "<a href='" + val + "'>" + val + "</a>");
+				}
+
+				i.innerHTML = html;
+			} );
+		}
 
 		// Setting up humane
-		humane.error = humane.spawn({ addnCls: 'humane-original-error', timeout: 5000 });
+		humane.error = humane.spawn({ addnCls: 'humane-jackedup-error', timeout: 5000 });
+		humane.success = humane.spawn({ addnCls: 'humane-jackedup-success', timeout: 5000 });
 
 		// Resetting for someone returning to the HTML renderer from another format
 		element.val( formats, "html" );
@@ -438,30 +554,12 @@
 			}
 		} );
 
-		// Preparing to change <pre> into Elements
-		matches = array.unique( html.match( /([^\s*]+)/g )
-				.filter( function ( i ){
-					return !/(\{|\[|\]|\})/.test( i );
-				} ) );
-
-		replaces = matches.map( function ( i ){
-			if ( i.indexOf( '"' ) > -1 ) {
-				return i.replace( /(\".*\")/, "<span class='item'>$1</span>" );
-			} else {
-				return i;
-			}
-		} );
-
-		array.iterate( matches, function ( i, idx ) {
-			html = html.replace( new RegExp( i, "g" ), replaces[ idx ] )
-		} );
-
 		render( function () {
 			var del = /DELETE/,
 				body = $( "#body" )[ 0 ],
 				form = $( "#io form" )[ 0 ],
 				reset = $( "button[type='reset']" )[ 0 ],
-				methods, observable;
+				methods, observable, result, resultCode;
 
 			function toggle ( type ) {
 				render( function () {
@@ -475,27 +573,14 @@
 				} );
 			}
 
-			// Changing <pre> into selectable Elements
-			code.parentNode.parentNode.innerHTML = html
-					.replace( /\n/g, "<br>\n" )
-					.replace(/(\s{2,2})/g, "<span class='spaces'></span>" );
-
-			// Changing URIs into anchors
-			array.iterate( $( '.item' ), function ( i ) {
-				var html = i.innerHTML,
-						val = html.replace( /(^\"|\"$)/g, "" );
-
-				if ( val.indexOf( "://" ) > -1 ) {
-					html = html.replace( val, "<a href='" + val + "'>" + val + "</a>");
-				}
-
-				i.innerHTML = html;
-			} );
+			prettify( code );
 
 			if ( csrf ) {
 				methods = $( "#methods" );
 				observable = util.observer();
 				nav = $( "#io nav" )[0];
+				result = $( "#result" )[ 0 ];
+				resultCode = result.querySelector( "code" );
 
 				// Toggling IO nav
 				element.removeClass( nav, "hidden" );
@@ -528,21 +613,55 @@
 					toggle( element.val( methods ) );
 				} );
 
-				// Intercepting form submission
+				// Intercepting form events
+				observable.hook( form, "reset" );
 				observable.hook( form, "submit" );
+
+				observable.on( "reset", function ( e ) {
+					render( function () {
+						element.addClass( result, "hidden" );
+						resultCode.innerHTML = "";
+					} );
+				} );
+
 				observable.on( "submit", function ( e ) {
 					var method = element.val( methods ),
-						body = del.test( method ) ? undefined : util.serialize( form );
+						payload;
 
 					util.stop( e );
-					request( parsed.href, method, body, { "x-csrf-token": csrf } ).then( function ( arg ) {
-						console.log( arg );
-						debugger;
+
+					render( function () {
+						element.addClass( result, "hidden" );
+						resultCode.innerHTML = "";
+					} );
+
+					if ( !del.test( method ) ) {
+						payload = element.val( $( "textarea" )[ 0 ] ) || "";
+
+						if ( typeof payload === "string" && ( string.isEmpty( payload ) || /^(\[|\{)/.test( payload ) ) ) {
+							humane.error( "Invalid JSON" );
+							console.error( new Error( "Invalid JSON" ) );
+							return;
+						}
+					}
+
+					request( parsed.href, method, payload, { "x-csrf-token": csrf, "content-type": "application/json" } ).then( function ( arg ) {
+						humane.success( "Success!" );
+
+						render( function () {
+							resultCode.innerHTML = JSON.stringify( arg, null, 2 );
+							prettify( resultCode );
+							element.removeClass( result, "hidden" );
+						} );
 					}, function ( e ) {
 						var data = JSON.parse( e.message ) || { error: "An error has occurred" };
 
 						humane.error( data.error );
-						console.error( data );
+						render( function () {
+							resultCode.innerHTML = e.message;
+							prettify( resultCode );
+							element.removeClass( result, "hidden" );
+						} );
 					} );
 				} );
 
