Fixing a reference error, which was meant to fix a parsing error (turtles!)

--- a/template.html
+++ b/template.html
@@ -475,6 +475,7 @@
 			$ = util.$,
 			array = util.array,
 			element = util.element,
+			json= util.json,
 			render = util.render,
 			request = util.request,
 			string = util.string,
