Adding `title` attribute to `config` which is used by the browsable API

--- a/template.html
+++ b/template.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Tensō Browsable API</title>
+	<title>{{title}}</title>
 	<meta name="viewport" content="width=device-width" />
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<style>
@@ -389,7 +389,7 @@
 
 <body>
 <header>
-	<h1 class="overflow">Tensō Browsable API</h1>
+	<h1 class="overflow">{{title}}</h1>
 </header>
 <article>
 	<h2 class="overflow">{{url}}</h2>
