--- a/www/index.html
+++ b/www/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>{{title}}</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<link type="text/css" href="assets/css/bulma.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/bulma.css" media="print,screen">
 </head>
 <body>
 
