Serving the partially functional new template

--- a/www/index.html
+++ b/www/index.html
@@ -27,15 +27,15 @@
 		</div>
 	</div>
 	<div class="content">
-        <div class="field">
+		<div class="field">
 			<label class="label">Subject</label>
 			<p class="control">
-    <span class="select">
-      <select>
-        <option>Select dropdown</option>
-        <option>With options</option>
-      </select>
-    </span>
+			<span class="select">
+				<select>
+					<option>Select dropdown</option>
+					<option>With options</option>
+				</select>
+			</span>
 			</p>
 		</div>
 	</div>
@@ -44,10 +44,8 @@
 <footer class="footer">
 	<div class="container">
 		<div class="content has-text-centered">
-			<p>
-				Copyright &copy; {{year}} <a href="http://avoidwork.com" title="View my homepage">Jason Mulligan</a><br>
-				<a href="https://github.com/avoidwork/tenso" title="View project homepage">Tensō</a> {{version}}
-			</p>
+			<p>Copyright &copy; {{year}} <a href="http://avoidwork.com" title="View my homepage">Jason Mulligan</a><br>
+				<a href="https://github.com/avoidwork/tenso" title="View project homepage">Tensō</a> {{version}}</p>
 		</div>
 	</div>
 </footer>
