Fixing a script loading copy/pasta

--- a/www/index.html
+++ b/www/index.html
@@ -50,8 +50,9 @@
 	</div>
 </footer>
 
-<script type="application/javascript" src="assets/js/tiny-observable.min.js" />
-<script type="application/javascript" src="assets/js/dom-router.min.js" />
+<script type="application/javascript" src="assets/js/dom-router.min.js"></script>
+<script type="application/javascript" src="assets/js/tiny-observable.min.js"></script>
+<script type="application/javascript" src="assets/js/app.js"></script>
 
 </body>
 </html>
