--- a/www/index.html
+++ b/www/index.html
@@ -4,6 +4,8 @@
 	<title>{{title}}</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<link rel="stylesheet" type="text/css" href="assets/css/bulma.css" media="print,screen">
+	<link rel="stylesheet" type="text/css" href="assets/css/style.css" media="print,screen">
+	<link rel="shortcut icon" href="assets/img/favicon.png">
 </head>
 <body>
 
@@ -44,7 +46,7 @@
 <footer class="footer">
 	<div class="container">
 		<div class="content has-text-centered">
-			<p>Copyright &copy; {{year}} <a href="http://avoidwork.com" title="View my homepage">Jason Mulligan</a><br>
+			<p><a href="http://avoidwork.com" title="Visit avoidwork.com"><img src="assets/img/avoidwork.svg" class="avoidwork logo" /></a><br>
 				<a href="https://github.com/avoidwork/tenso" title="View project homepage">Tensō</a> {{version}}</p>
 		</div>
 	</div>
