Coloring the text area

--- a/www/index.html
+++ b/www/index.html
@@ -72,7 +72,23 @@
 					</div>
 				</div>
 				<div id="request" class="dr-hidden">
-					Request form here
+					<div class="container">
+						<div class="field">
+							<label class="label">Body</label>
+							<p class="control">
+								<textarea class="textarea" placeholder="Enter JSON request body here"></textarea>
+							</p>
+						</div>
+
+						<div class="field is-grouped">
+							<p class="control">
+								<button class="button is-primary">Submit</button>
+							</p>
+							<p class="control">
+								<button class="button is-link">Cancel</button>
+							</p>
+						</div>
+					</div>
 				</div>
 			</div>
 		</section>
